src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Url of player&apos;s Image</description>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IsManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Password_Length_More_Than_Seven_Symbols</fullName>
        <active>true</active>
        <description>Length must be at least 8 symbols</description>
        <errorConditionFormula>LEN(Password__c) &lt; 8</errorConditionFormula>
        <errorDisplayField>Password__c</errorDisplayField>
        <errorMessage>Password length must be at least 8 symbols</errorMessage>
    </validationRules>
</CustomObject>